feat(device) detect brand 3Q model: Qoo! Glaze feat(device) detect brand Supra model: M74AG feat(device) detect brand Highscreen model: Verge M feat(device) detect brand Oukitel models: C8, C8 4G feat(device) detect brand bq model: Strike Power Easy feat(device) detect brand Vertex model: Luck

--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -3074,6 +3074,7 @@
     brand: Motorola
     model: Moto G8 Power Lite
   os_family: Android
+  browser_family: Android Browser
 -
   user_agent: Dalvik/2.1.0 (Linux; U; Android 11; T790Y Build/RKQ1.201004.002)
   os:
@@ -3125,7 +3126,7 @@
   device:
     type: smartphone
     brand: Tecno Mobile
-    model: Camon 12
+    model: Camon 12 Air
   os_family: Android
   browser_family: Android Browser
 -
@@ -3234,3 +3235,89 @@
     model: M8
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.4.2; en-US; VergeM Build/KOT49H) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.108 UCBrowser/12.10.9.1193 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 12.10.9.1193
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Highscreen
+    model: Verge M
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; C8 Build/NRD90M; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/62.0.3202.84 Mobile Safari/537.36 Instagram 83.0.0.20.111 Android (24/7.0; 320dpi; 640x1040; OUKITEL; C8; C8; mt6580; ru_RU; 144612596)
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 83.0.0.20.111
+  device:
+    type: smartphone
+    brand: Oukitel
+    model: C8
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; C8 4G Build/NRD90M; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/77.0.3865.73 Mobile Safari/537.36 Instagram 110.0.0.16.119 Android (24/7.0; 320dpi; 640x1184; OUKITEL; C8 4G; C8_4G; mt6735; ru_RU; 171727780)
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 110.0.0.16.119
+  device:
+    type: smartphone
+    brand: Oukitel
+    model: C8 4G
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; BQru_BQru-5058) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.105 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 72.0.3626.105
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: bq
+    model: Strike Power Easy
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: UCWEB/2.0 (MIDP-2.0; U; Adr 8.1.0; ru; Luck) U2/1.0.0 UCBrowser/11.1.2.1113 U2/1.0.0 Mobile
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 11.1.2.1113
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Vertex
+    model: Luck
+  os_family: Android
+  browser_family: Unknown
