--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -4031,3 +4031,39 @@
     model: iPlay 40
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.2.2; RC7804F Build/JDQ39)
+  os:
+    name: Android
+    version: 4.2.2
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tablet
+    brand: 3Q
+    model: Qoo! Glaze
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.4.2;  zh-cn; SUPRA M74AG; Android/4.4.2; Release/11.05.2015)  AppleWebKit/534.30 (KHTML, like Gecko) Mobile Safari/534.30
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: "534.30"
+  device:
+    type: tablet
+    brand: Supra
+    model: M74AG
+  os_family: Android
+  browser_family: Android Browser
