--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -7102,4 +7102,21 @@
     model: IdeaPad S145-15IWL
   os_family: Windows
   browser_family: Unknown
-
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; BilimBook mini) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 88.0.4324.93
+    engine: Blink
+    engine_version: ""
+  device:
+    type: desktop
+    brand: BilimLand
+    model: BilimBook Mini
+  os_family: Android
+  browser_family: Chrome
