--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -4086,6 +4086,24 @@
   os_family: Android
   browser_family: Chrome
 -
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.0.4; Maxtron T1 Build/IMM76D)
+  os:
+    name: Android
+    version: 4.0.4
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Maxtron
+    model: T1
+  os_family: Android
+  browser_family: Android Browser
+-
   user_agent: Mozilla/5.0 (Linux; Android 10; CITI 8 E400 4G CS8231PL) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/89.0.4389.90 Safari/537.36
   os:
     name: Android
